--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
     <ul>
         <li>Redes LAN. Su nombre proviene de Local Area Network (en inglés: “Red de Área Local”), pues son las redes de menor tamaño y extensión, como las que pueden existir entre los computadores de un mismo locutorio o ciber café.</li>
     </ul>
-    <img src="Red LAN.jpg" width="200" height="200">
+    <center><img src="Red LAN.jpg" width="200" height="200"></center>
     <ul>
         <li>Redes MAN. Su nombre viene de Metropolitan Area Network (en inglés: “Red de Área Metropolitana”) y designa redes de tamaño intermedio, como las empleadas en grandes bibliotecas o grandes empresas, conectando áreas distintas y alejadas geográficamente entre sí.</li>   
     </ul>
-    <img src="REDMAN.jpeg" width="200" height="200">
+    <center><img src="REDMAN.jpeg" width="200" height="200"></center>
     <ul>
         <li>Redes WAN. Llamada así por las siglas de Wide Area Network (en inglés: “Red de Área Amplia”), se trata de redes de gran envergadura y extenso alcance, como puede ser la red global de redes, Internet.</li>    
     </ul>
-    <img src="REDWAN.jpg" width="200" height="200">
+    <center><img src="REDWAN.jpg" width="200" height="200"></center>
     <ul>
         <li>Existen otras posibles clasificaciones de las redes de computadoras, de acuerdo a su topología específica, su relación funcional o direccionalidad de los datos.</li>
     </ul>
@@ -59,8 +59,8 @@
     
    
 </ul>
-    <video width="520" height="440" controls>
-        <source src="Redes 1.mp4" type="video/mp4">
+    <center><video width="520" height="440" controls>
+    <source src="Redes 1.mp4" type="video/mp4"></center>
     
     </
 </video>
