--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 </head>
 <body bgcolor="lightblue">
     <center>
-        <h1>Red de computadoras</h1>
+        <h1>Red de computadoras</h1> 
+        
     </center>
-    <a href="Formulario Topologia de redes.html">Formulario de redes de computadora</a><br><br>
+    <a href="Formulario Topologia de redes.html">Formulario de redes de computadora</a>   <a href="Funcionamiento de las redes.html">Funcionamiento de las redes de computadora</a>
     <p style="color:rgb(0, 0, 0)">Una red informática, una red de comunicaciones de datos o una red de computadoras es la interconexión de distinto número de sistemas informáticos a través de una serie de dispositivos de telecomunicaciones y un medio físico (alámbrico o inalámbrico). Su función es compartir información en paquetes de datos. Los mismos se transmiten mediante impulsos eléctricos, ondas electromagnéticas u otros medios, empleando una codificación especial. Para ello, el sistema traduce a un mismo idioma los procesos de las distintas computadoras, a través de una serie de estándares de comunicación. Las redes de computadoras no son distintas, en su lógica de intercambio, de otros procesos comunicativos: poseen un emisor, un receptor y un mensaje, un medio a través del cual transmitir el mensaje y una serie de códigos o protocolos para garantizar su correcta comprensión. Solo que, en este caso, quienes envían y reciben mensajes son computadoras.</p>
     <h3>Funcionamiento de las redes de computadora</h3>
     <p>La red de computadoras permite compartir recursos a distancia, aumenta la velocidad de la transmisión de datos (es más rápido acceder a un archivo por una red que a través de Internet, por ejemplo) e incrementa la confiabilidad. Las computadoras pueden estar interconectadas mediante cable coaxial (que transporta los datos a través de dos conductores concéntricos), cable de par trenzado (los dos conductores concéntricos están entrelazados para reducir las interferencias) o fibra óptica (un hilo muy fino por el que fluyen los pulsos de luz con la información a transmitir).</p>
