--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <br>
     <br>
     <audio controls>
-        <center><source src="AudioWeb.mp3" type="audio/mp3"></center>
+        <source src="AudioWeb.mp3" type="audio/mp3">
         Su navegador no soporta audio
     </audio>
     <br>
