--- a/index.html
+++ b/index.html
@@ -32,10 +32,15 @@
     <h3>Elementos básicos de una red de computadoras</h3>
     <ul>
         <li>Servidor. Las computadoras de una red no poseen la misma jerarquía, ni desempeñan las mismas funciones. Por ejemplo, los servidores son los encargados de procesar el flujo de datos de la red, atendiendo a todas las demás computadoras conectadas (es decir, “sirviéndolos”) y centralizando el control de la red en sí misma.</li>
+        <center><img src="servidor.jpg" width="200" height="200"></center>
         <li>Clientes o estaciones de trabajo. Estas son las computadoras que no sirven a las demás, sino que forman parte de la red y brindan acceso a la misma, solicitando los recursos administrados por el servidor.</li>
+        <center><img src="estacion de trabajo.jpg" width="200" height="200"></center>
         <li>Medios de transmisión. Se refiere al cableado, a las ondas electromagnéticas, o al medio físico que permita la transmisión de la información de la red, sea cual sea.</li>
+        <center><img src="Medios de transmicion.jpg" width="200" height="200"></center>
         <li>Elementos de hardware. Todas las piezas tecnológicas que habilitan el establecimiento físico de una red, o sea, que la permiten. Hablamos de tarjetas de red, módems y enrutadores, o antenas repetidoras que extienden la conexión inalámbricamente.</li>
+        <center><img src="elementos.jpg" width="200" height="200"></center>
         <li>Elementos de software. Similarmente, se requiere de programas para administrar y poner en funcionamiento el hardware de comunicaciones de cada estación de trabajo, lo que incluye el Sistema Operativo de Redes (NOS, del inglés Network Operating System), que además de sostener la operatividad de la red, le brinda servicios de antivirus y firewall; así como los protocolos comunicativos (TCP/IP) que permiten a las máquinas compartir el idioma.</li>
+        <center><img src="elementodesof.jpg" width="200" height="200"></center>
     </ul>
     <h3>Ventajas de una red de computadoras</h3>
     <ul>
