--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
-<html>
+<!DOCTYPE html>
+<html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>PARCIAL PRACTICO 2</title>
-    <link rel="stylesheet" a href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Prueba Formativa - Tipos de Redes de Computadoras</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="menu container">
-            <a href="#" class="logo" >logo</a>
-            <input type="checkbox" id="menu">
-            <label for="menu">
-                <img src="images/menu-btn.png" class="menu-icono" alt="">
-            </label>
-            <nav class="nabar">
+            <a href="#" class="logo">Logo</a>
+            <input type="checkbox" id="menu-toggle">
+            <label for="menu-toggle" class="menu-icon">&#9776;</label>
+            <nav class="navbar">
                 <ul>
                     <li><a href="Formulario Topologia de redes.html">Formulario de redes de computadora</a></li>
                     <li><a href="Funcionamiento de las redes.html">Funcionamiento de las redes de computadora</a></li>
                 </ul>
             </nav>
         </div>
-    
+
         <center>
             <h1>Red de computadoras</h1>      
         </center>
