--- a/Funcionamiento de las redes.html
+++ b/Funcionamiento de las redes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Funcionamiento de las redes de computadoras</title>
-    <link rel="stylesheet" href="styles3.css">
+    <link rel="stylesheet" href="style2.css">
 </head>
 <body bgcolor="lightblue">
       <h2>¿Para qué sirve una red de computadoras?</h2>
